Version 3.4.0 - 2014-11-03

Version 3.4.0 - 2014-06-03
* Initial release