@@ -1,3 +1,5 @@
+* Modify BOM and Route name when Process name is modified
+
 Version 3.4.0 - 2014-11-03
 
 Version 3.4.0 - 2014-06-03
